# rogue

./: .gitignore  BUGS.md  Cargo.toml  README.md  TODO.md  build.rs  flake.nix  index.html  shader_slang_bugs_i_should_report.md
.cargo/: config.toml
assets/models/: arrow.glb  sphere.glb
assets/shaders/: bake_chunk.slang  bake_model.slang  consts.slang  debug_raster.slang  debug_shapes.slang  editor_voxel_preview.slang  egui.slang  lib.slang  normal_calc.slang  normal_calc_standalone.slang  normal_calc_terrain.slang  post_process.slang  ray_compute.wgsl  ray_projection.slang  rt_prepass.slang  rt_sample.slang  terrain_prepass.slang  terrain_prepass.wgsl  voxel_trace.wgsl
assets/shaders/lib/: color.slang  debug.slang  material.slang  math.slang  random.slang  sdf.slang  uniforms.slang  voxel.wgsl  world.slang
docs/todo/: PHYSICS.md  RENDERER.md  VOXEL.md
editor/: Cargo.toml  build.rs
editor/src/: animation_preview.rs  camera_controller.rs  editor_input.rs  editor_project_settings.rs  editor_settings.rs  editor_transform_euler.rs  game_session.rs  gizmo.rs  history_buffer.rs  init.rs  main.rs  render_graph.rs  selected_entity_visualizer.rs  session.rs  voxel_editing.rs
editor/src/common/: freelist.rs  mod.rs  morton.rs  oneshot.rs  ring_queue.rs
editor/src/editing/: mod.rs  voxel_editing.rs  voxel_editing_color_picker.rs  voxel_editing_edit_tools.rs  voxel_editing_preview.rs  voxel_editing_preview_gpu.rs  voxel_editing_selection.rs  voxel_editing_selections_gpu.rs
editor/src/engine/: init.rs  mod.rs  system.rs
editor/src/game/: camera_controller.rs  game_loop.rs  init.rs  mod.rs
editor/src/ui/: animation_pane.rs  asset_pane.rs  asset_properties_pane.rs  create_animation_track_dialog.rs  create_voxel_model_dialog.rs  editing_pane.rs  entity_hierarchy.rs  entity_properties.rs  global_state.rs  material_picker.rs  material_selection_dialog.rs  materials_pane.rs  mod.rs  pane.rs  resize_model_dialog.rs  top_bar.rs  ui.rs  util.rs  world_pane.rs
editor/src/world/: generator.rs
engine/: Cargo.toml
engine/src/: app.rs  consts.rs  event.rs  game_loop.rs  init.rs  lib.rs  resource.rs  session.rs  settings.rs  system.rs
engine/src/animation/: animation.rs  animation_bank.rs  animation_channel.rs  animation_property.rs  animator.rs  mod.rs
engine/src/asset/: asset.rs  gltf.rs  mod.rs  util.rs
engine/src/audio/: audio.rs  audio_asset.rs  mod.rs
engine/src/common/: animate.rs  archetype.rs  bitset.rs  dyn_vec.rs  freelist.rs  id.rs  mod.rs  morton.rs  serde_util.rs  util.rs
engine/src/debug/: debug_renderer.rs  mod.rs
engine/src/egui/: egui.rs  egui_gpu.rs  egui_util.rs  mod.rs
engine/src/engine/: event.rs
engine/src/entity/: archetype.rs  component.rs  ecs_world.rs  entity.rs  query.rs  scripting.rs  tests.rs
engine/src/game/: camera_controller.rs  init.rs  player_controller.rs  spinning_platform.rs
engine/src/graphics/: backend.rs  bvh.rs  camera.rs  device.rs  frame_graph.rs  gpu_allocator.rs  mod.rs  post_process_pass.rs  renderer.rs  shader.rs
engine/src/input/: gamepad.rs  input.rs  input_buffer.rs  keyboard.rs  mapper.rs  mod.rs
engine/src/material/: material.rs  material_bank.rs  material_gpu.rs  mod.rs  model_material_map.rs
engine/src/noise/: fbm.rs  mod.rs  perlin.rs
engine/src/physics/: box_collider.rs  capsule_collider.rs  collider.rs  collider_component.rs  collider_registry.rs  collider_voxel_registry.rs  mod.rs  physics_world.rs  plane_collider.rs  rigid_body.rs  transform.rs  voxel_collider.rs
engine/src/task/: mod.rs  tasks.rs
engine/src/ui/: mod.rs
engine/src/util/: mod.rs
engine/src/voxel/: attachment.rs  baker_gpu.rs  flat.rs  mod.rs  rvox_asset.rs  sft.rs  sft_compressed.rs  sft_compressed_gpu.rs  sft_gpu.rs  thc.rs  voxel.rs  voxel_allocator.rs  voxel_events.rs  voxel_palette.rs  voxel_registry.rs  voxel_registry_gpu.rs  voxel_world.rs
engine/src/window/: time.rs  util.rs  window.rs
engine/src/world/: entity_bvh.rs  mod.rs  region.rs  region_asset.rs  region_iter.rs  region_map.rs  sky.rs  terrain_renderable.rs  world.rs  world_entities.rs  world_entities_gpu.rs  world_renderable.rs  world_streaming.rs
game/: Cargo.toml
game/src/: lib.rs  weapon.rs
game/src/player/: mod.rs  player_camera_controller.rs  player_controller.rs
macros/: Cargo.toml
macros/src/: game_component.rs  generate_tuples.rs  lib.rs  resource.rs
nix/: rogue-runtime.nix
project_data/: project.json  project_old.json
project_data/assets/: .gitignore
project_data/assets/models/: iron_sword.rvox  player.rvox  player_foot.rvox  player_hand.rvox  player_head.rvox  player_torso.rvox
project_data/assets/scripts/: test.lua
runtime/: Cargo.toml  build.rs
runtime/src/: main.rs  render_graph.rs  runtime_project_loader.rs  runtime_session.rs
sample_projects/forest/: project.json
sample_projects/physics/: project.json
sample_projects/physics/assets/: cube.rvox
src/: app.rs  consts.rs  game_loop.rs  main.rs  session.rs  settings.rs
src/common/: aabb.rs  animate.rs  archetype.rs  bitset.rs  dyn_vec.rs  freelist.rs  mod.rs  morton.rs  obb.rs  ray.rs  ring_queue.rs  serde_util.rs  set.rs  vtable.rs
src/common/color/: mod.rs
src/common/geometry/: aabb.rs  obb.rs  ray.rs  shape.rs
src/engine/: event.rs  init.rs  mod.rs  resource.rs  system.rs
src/engine/asset/: asset.rs  mod.rs  util.rs
src/engine/audio/: audio.rs
src/engine/debug/: mod.rs
src/engine/ecs/: ecs_world.rs  mod.rs
src/engine/editor/: clipboard.rs  editor.rs  entity_properties.rs  gizmo.rs  mod.rs  stats.rs  ui.rs
src/engine/entity/: archetype.rs  component.rs  ecs_world.rs  entity.rs  mod.rs  query.rs  scripting.rs  tests.rs
src/engine/graphics/: backend.rs  bvh.rs  camera.rs  device.rs  frame_graph.rs  gpu_allocator.rs  mod.rs  pipeline_manager.rs  render_contants.rs  renderer.md  renderer.rs  sampler.rs  shader.rs  shaders.rs
src/engine/input/: input.rs  mapper.rs  mod.rs  mouse.rs
src/engine/material/: material.rs
src/game/: camera_controller.rs  game.rs  game_loop.rs  game_scripts.rs  init.rs  mod.rs  player_controller.rs
(+245 files in other folders)
