[package]
name = "rogue"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89" }
bitflags = "2.6.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
cfg-if = "1"
downcast = "0.11.0"
egui = "0.29.1"
egui-winit = { version = "0.29.1", default-features = false, features = [] }
epaint = { version = "0.29.1", features = ["bytemuck"] }
env_logger = "0.11.3"
fixedbitset = "0.5.7"
gilrs = "0.11.0"
naga_oil = "0.15.0"
nalgebra = "0.33.0"
hecs = { version = "0.10.4", features = ["macros"] }
include-wgsl-oil = "0.2.6"
log = "0.4.21"
rand = "0.8.5"
regex = "1.11.0"
parking_lot = "0.12.1"
pollster = "0.3.0"
raw-window-handle = "0.6.2"
rogue-macros = { path = "./macros" }
winit = "0.30.5"
wgpu = { version = "22.1.0", features = ["webgpu", "vulkan-portability"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.72", features = [
  "Document",
  "Window",
  "Element",
  "FileSystem",
  "Performance",
  "Request",
  "RequestMode",
  "Headers",
  "AbortSignal",
  "Response",
  "RequestInit",
]}
